--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/express": "^5.0.2",
     "@types/request-promise-native": "^1.0.21",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^5.0.0",
@@ -53,8 +54,8 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "node-ical": "^0.20.1",
     "ical-generator": "^9.0.0",
+    "node-ical": "^0.20.1",
     "tsdav": "^2.0.7"
   },
   "peerDependencies": {
