--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^8.32.1",
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^5.0.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.2"
   },
