--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
   "name": "n8n-nodes-nextcloud-calendar",
-  "version": "1.0.0",
-  "description": "Ein spezialisierter Nextcloud Kalender-Node für n8n.",
+  "version": "0.1.43",
+  "description": "n8n Node für die Integration mit Nextcloud Calendar",
   "keywords": [
     "n8n-community-node-package",
+    "n8n-node-nextcloud",
     "nextcloud",
-    "calendar",
-    "caldav"
+    "calendar"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/terschawebIT/n8n-nodes-nextcloud-calendar",
+  "homepage": "https://n8n.io",
   "author": {
-    "name": "Niko Terschawetz"
+    "name": "Niko Terschawetz",
+    "email": "nt@terschaweb.de"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/terschawebIT/n8n-nodes-nextcloud-calendar.git"
   },
   "main": "index.js",
-  "engines": {
-    "node": ">=20.15.0",
-    "npm": ">=10.0.0"
-  },
   "scripts": {
-    "build": "tsc && gulp build",
+    "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
     "lint": "eslint nodes credentials package.json",
     "lintfix": "eslint nodes credentials package.json --fix",
-    "prepublishOnly": "npm run build && npm run lint"
+    "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes credentials package.json"
   },
   "files": [
     "dist"
@@ -36,34 +33,30 @@
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
-      "dist/credentials/NextcloudCalendarAuth.credentials.js"
+      "dist/credentials/NextcloudCalendarApi.credentials.js"
     ],
     "nodes": [
       "dist/nodes/NextcloudCalendar/NextcloudCalendar.node.js"
     ]
   },
   "devDependencies": {
-    "@types/express": "^5.0.2",
-    "@types/request-promise-native": "^1.0.21",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "eslint-plugin-n8n-nodes-base": "^1.16.1",
-    "gulp": "^5.0.0",
-    "jsonc-eslint-parser": "^2.4.0",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.2"
+    "@types/node": "^20.0.0",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "~5.45",
+    "@typescript-eslint/parser": "~5.45",
+    "eslint": "^8.0.0",
+    "eslint-plugin-n8n-nodes-base": "^1.11.0",
+    "gulp": "^4.0.2",
+    "n8n-core": "*",
+    "n8n-workflow": "*",
+    "prettier": "^2.7.1",
+    "typescript": "~4.8.4"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "ical-generator": "^9.0.0",
-    "node-ical": "^0.20.1",
-    "tsdav": "^2.0.7"
+    "tsdav": "^2.0.3",
+    "uuid": "^11.1.0"
   },
   "peerDependencies": {
-    "n8n-core": "^1.90.2",
-    "n8n-workflow": "^1.90.2"
-  },
-  "bugs": {
-    "url": "https://github.com/terschawebIT/n8n-nodes-nextcloud-calendar/issues"
+    "n8n-workflow": ">=1.0.0"
   }
 }
